0.3.0
-----

Features:

* Support for variadic functions

Bug fixes:

* Some functions (like malloc, printf, ...) that are pre-declared by clang
  weren't considered by cdef

0.2.1
-----

Features:

* Support for Windows 10 x64, with bindings for Python 3

0.2.0
-----

Features:

* Support for the C99 boolean type
* Support for OSX x86 32/64 bits
* Support for Linux x86 32 bits
* Support for typedefs in cdef

Bug fixes:

* the UnknownField and AllocError exceptions were not registered in pybind11
* an invalid triple was potentially used by the LLVM JITer
* {Complex,}Float{32,64,128} are renamed into
  {Complex,}{Float,Double,LongDouble} (closer to the C reality)

0.1.0
-----

Initial version